--- a/index.html
+++ b/index.html
@@ -7,9 +7,51 @@
 </head>
 
 <body>
-    <h2>RUN BUDDY</h2>
-    What We Do What Do Your Trainers Reach Out
-    🏃
+
+    <!-- nav -->
+    <header>
+        <h1>RUN BUDDY</h1>
+    </header>
+
+    <!-- hero/jumbo-->
+    <section>
+
+    </section>
+
+    <!-- "what we do"-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+
+    <!--"what you do-->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+
+    <!-- meet the trainers-->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+
+    <!-- reach out-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+
+    <!-- footer-->
+    <footer>
+        <h2>❤️ Made with love by Run Buddy</h2>
+    </footer>
+
+
 </body>
+
+
+
+
 
 </html>
