--- a/index.html
+++ b/index.html
@@ -36,7 +36,64 @@
 
     <!-- hero/jumbo-->
     <section>
+        <div>
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!-- Add form element -->
+            <form>
 
+                <label for="name">Enter full name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name">
+                <label for="email">Enter email address:</label>
+                <input type="email" placeholder="Email Address" name="email" id="email">
+                <label for="phone">Enter a telephone number:</label>
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone">
+
+
+                <!-- radio button section -->
+
+                <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes">
+                    <label for="trainer-yes">Yes</label>
+
+                    <input type="radio" name="trainer-confirm" id="trainer-no">
+                    <label for="trainer-no">No</label>
+                </p>
+
+                <!-- checkbox section -->
+
+                <!-- below commented section is the code with classes I wrote.. trying out the code from the final html.. -->
+
+                <p>
+                    <label for="checkbox">
+                        I acknowledge that I am at least 18 years of age.
+                    </label>
+                    <input type="checkbox" id="checkbox" name="age-confirm">
+                </p>
+
+
+                <!-- snippet from final code... -->
+
+                <!--
+                <p>
+                    <label for="checkbox">
+                        I acknowledge that I am at least 18 years of age.
+                    </label>
+                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                </p> -->
+
+                <!-- submit button -->
+
+                <button type="submit">
+                    Get Running!
+                </button>
+
+
+
+
+            </form>
+        </div>
     </section>
 
     <!-- "what we do"-->
@@ -66,6 +123,10 @@
     <!-- footer-->
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, inc
+        </div>
     </footer>
 
 
