--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <img src="images/01-05-trainers/trainer-3.jpg"
                 alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
+                <h3>Harry "The Headband" Smith</h3>
                 <h4>Strength</h4>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
