--- a/index.html
+++ b/index.html
@@ -212,8 +212,21 @@
         <div class="contact-info">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.9985943933502!2d-83.09252218394572!3d40.09774427940337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883892b1f84651af%3A0xa0f96508cc4e3c8b!2sBurger%20King!5e0!3m2!1sen!2sus!4v1643757707890!5m2!1sen!2sus"
-                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
 
+            <div class="contact-form">
+                <h3>Contact us</h3>
+                <form>
+                    <label for="contact-name">Your Name</label>
+                    <input type="text" id="contact-name" placeholder="Your Name">
+
+                    <label for="contact-message">Message</label>
+                    <textarea id="contact-message" placeholder="Message"></textarea>
+
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
 
             <div>
                 <h3>Run Buddy</h3>
