added missing h4's in 'what you do', chnged some styles from 2.3.5

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="viewport" content="width=device-width", initial-scale="1.0"/>
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -155,6 +155,7 @@
                     <img src="./images/01-04-svgs/step-2.svg" alt="">
                 </div>
                 <div class="step-text">
+                    <h4>Consult With One Of Our Trainers.</h4>
                     <p>Are you here to build muscle, lose weight, or just feel good?</p>
                 </div>
             </div>
@@ -169,6 +170,7 @@
                     <img src="./images/01-04-svgs/step-3.svg" alt="">
                 </div>
                 <div class="step-text">
+                    <h4>Get Running.</h4>
                     <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
                 </div>
             </div>
@@ -182,6 +184,7 @@
                     <img src="./images/01-04-svgs/step-4.svg" alt="">
                 </div>
                 <div class="step-text">
+                    <h4>See Results.</h4>
                     <p>Bi-weekly checkins with your trainer will keep you focused</p>
                 </div>
             </div>
