added three media query breakpoints - 575, 768, 980

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
-            <!-- Unordered List Element-->
             <ul>
                 <li>
-                    <!--Anchor element-->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
@@ -126,15 +124,11 @@
     <!--"what you do-->
 
     <section id="what-you-do" class="steps">
-        
-        
         <div class="flex-row">
             <h2 class="section-title secondary-border">
                 What You Do
             </h2>
         </div>
-
-
         <div class="step">
             <h3>Step 1.</h3>
             <div class="step-info">
@@ -147,7 +141,6 @@
                 </div>
             </div>
         </div>
-
         <div class="step">
             <h3>Step 2.</h3>
             <div class="step-info">
@@ -160,9 +153,6 @@
                 </div>
             </div>
         </div>
-
-
-
         <div class="step">
             <h3>Step 3.</h3>
             <div class="step-info">
@@ -175,8 +165,6 @@
                 </div>
             </div>
         </div>
-
-
         <div class="step">
             <h3>4. See Results</h3>
             <div class="step-info">
@@ -189,8 +177,6 @@
                 </div>
             </div>
         </div>
-
-
     </section>
 
 
@@ -290,7 +276,7 @@
             <div class="contact-form">
                 <h3>Contact us</h3>
                 <form>
-                    <label for="contact-name">Your Name</label>
+                    <label for="contact-name"></label>
                     <input type="text" id="contact-name" placeholder="Your Name">
 
                     <label for="contact-message"></label>
