added CSS selectors to fabricate new radio buttons and checkboxes.  Ended on 2.5.4

--- a/index.html
+++ b/index.html
@@ -61,33 +61,40 @@
 
                 <p>
                     Have you worked out with a trainer before?
+                    <span class="radio-wrapper">
+                      <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                      <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper">
+                      <input type="radio" name="trainer-confirm" id="trainer-no" />
+                      <label for="trainer-no">No</label>
+                    </span>
+                  </p>
+                  <p>
+                    <span class="checkbox-wrapper">
+                      <input type="checkbox" name="age-confirm" id="checkbox" />
+                      <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                    </span>
+                  </p>
+
+
+
+                <!-- <p>
+                    Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes">
                     <label for="trainer-yes">Yes</label>
 
                     <input type="radio" name="trainer-confirm" id="trainer-no">
                     <label for="trainer-no">No</label>
-                </p>
+                </p> -->
 
                 <!-- checkbox section -->
 
-                <!-- below commented section is the code with classes I wrote.. trying out the code from the final html.. -->
-
-                <p>
+                <!-- <p>
                     <label for="checkbox">
                         I acknowledge that I am at least 18 years of age.
                     </label>
                     <input type="checkbox" id="checkbox" name="age-confirm">
-                </p>
-
-
-                <!-- snippet from final code... -->
-
-                <!--
-                <p>
-                    <label for="checkbox">
-                        I acknowledge that I am at least 18 years of age.
-                    </label>
-                    <input type="checkbox" name="age-confirm" id="checkbox" />
                 </p> -->
 
                 <!-- submit button -->
